<resources>
    <string name="app_name">Writing Improv</string>
    <!-- buttons -->
    <string name="my_writing">My Writing</string>
    <string name="send_challenge">Send Challenge</string>
    <string name="review_challenges">Review Sent Challenges</string>
    <string name="challenges">Challenges</string>
    <string name="practice">Practice</string>
    <string name="go">Go</string>
    <string name="shuffle">Shuffle Prompt and Time</string>
    <string name="edit_times">Edit Times</string>
    <string name="submit">Submit</string>
    <string name="menu">Menu</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create an Account</string>
    <string name="random_image">Random Image</string>
    <string name="submit_review">Submit Review</string>
    <!-- labels -->
    <string name="label_time">Time (in minutes):</string>
    <string name="label_prompt">Prompt:</string>
    <string name="label_instructions">Use the image and the prompt below!</string>
    <string name="label_author">Author:</string>
    <string name="label_status">Status:</string>
    <string name="label_writing">Writing:</string>
    <string name="label_review">Review:</string>
    <!-- hints-->
    <string name="hint_time">Minutes</string>
    <string name="hint_writing">Write here!</string>
    <string name="hint_my_writing_details">Your submitted writing</string>
    <string name="hint_username">Username</string>
    <string name="hint_challenge_prompt">Write the prompt you want to send here!</string>
    <string name="hint_challenge_time">Time limit</string>
    <string name="hint_sent_challenge_details_review">Review this author\'s submitted writing</string>
    <!--    content descriptions-->
    <string name="desc_menu_icon">Menu Icon</string>
    <string name="desc_image">Image</string>
    <string name="desc_time">Time</string>
    <string name="desc_check">Check</string>
    <string name="desc_cross">Cross</string>
    <string name="desc_thumb_image">Thumbnail Image</string>
    <!--    error-->
    <string name="error_minutes">Please enter a time!</string>
    <string name="error_loading_image">Please check your Internet connection. Error loading image.</string>
    <string name="error_loading_prompts">Please check your Internet connection. Error getting prompts.</string>
    <string name="error_loading_url">Please check your Internet connection. Error getting URL.</string>
    <string name="error_loading_my_writing">Please check your Internet connection. Error getting writing.</string>
    <string name="error_loading_authors">Please check your Internet connection. Error getting authors.</string>
    <string name="error_loading_challenges">Please check your Internet connection. Error getting challenges.</string>
    <string name="error_sign_in">Please check your Internet connection. Error signing in.</string>
    <string name="error_sign_out">Please check your Internet connection. Error signing out.</string>
    <string name="error_user_info">Please check your Internet connection. Error getting user info.</string>
    <string name="error_practice_times">Please enter a valid time range!</string>
    <string name="error_writing">Please write some text!</string>
    <string name="error_submitting_review">Please check your Internet connection. Error submitting review.</string>
    <string name="error_loading_review">Please check your Internet connection. Error loading review.</string>
    <string name="error_deleted_writing">Error deleting writing for: %1$s</string>
    <string name="error_deleted_challenge">Error deleting: %1$s</string>
    <string name="error_email_deleted_writing">Error deleting, could not get account information.</string>
    <string name="error_create_prompt_empty">Please create a new prompt!</string>
    <string name="error_create_prompt">Error saving your new prompt! Please check your Internet connection.</string>
    <string name="error_deleted_prompt">Error deleting prompt: %1$s</string>
    <string name="error_delete_all_prompts">You must have at least 1 practice prompt!</string>
    <string name="error_getting_random_prompt">Error getting random prompt. Please check your Internet connection.</string>
    <string name="error_bot">Error generating challenge.</string>
    <!--    prompts-->
    <string name="prompt_feel">How does this make you feel?</string>
    <string name="prompt_story">What is the story behind this?</string>
    <string name="prompt_mystery">Mystery</string>
    <string name="prompt_action">Action</string>
    <string name="prompt_thriller">Thriller</string>
    <string name="prompt_comedy">Comedy</string>
    <!-- sign in and out toasts-->
    <string name="user_sign_out">Signed out!</string>
    <string name="user_sign_in">Welcome, %1$s!</string>
    <!-- time left toast -->
    <string name="time_left_secs">%1$d seconds left!</string>
    <!-- submitted writing toast-->
    <string name="out_of_time">Sorry, you ran out of time!</string>
    <string name="on_time">Nice job, you did it!</string>
    <!-- sent challenge to author toasts -->
    <string name="sent_challenge_success">Successfully sent challenge to %1$s!</string>
    <string name="sent_challenge_error">Error sending challenge to %1$s. Please check your Internet connection.</string>
    <!-- no writing -->
    <string name="my_writing_empty">You have no writing submitted yet!</string>
    <!-- no authors -->
    <string name="authors_empty">There are no other authors to challenge yet!</string>
    <!-- no challenges -->
    <string name="challenges_empty">You have not received any challenges yet!</string>
    <string name="sent_challenges_empty">You have not sent any challenges to other users yet!</string>
    <string name="challenge_from">Challenge from %1$s</string>
    <!--    send challenge to username-->
    <string name="send_challenge_to_user">Send challenge to %1$s!</string>
    <string name="challenge_sent_to">Challenge sent to %1$s</string>
    <!--review sent challenge submitted or not status-->
    <string name="sent_challenge_not_submitted_short">Pending</string>
    <string name="sent_challenge_submitted_short">Submitted</string>
    <string name="sent_challenge_not_submitted">No writing submitted.</string>
    <string name="sent_challenge_submitted">Writing submitted.</string>
    <!--inform user his or her review has been submitted-->
    <string name="review_submitted">Your review has been submitted!</string>
    <!--challenge and writing lists' time in minutes for each item-->
    <string name="time_minutes">%1$s minutes</string>
    <!--notification channel-->
    <string name="channel_name">Challenges</string>
    <string name="channel_description">Notify when receiving challenges from other users</string>
    <!--notification text-->
    <string name="notification_title">You received %1$s</string>
    <string name="notification_text">Prompt: %1$s</string>
    <string name="notification_title_submitted_challenge">Your challenge sent to %1$s was completed</string>
    <!--settings options menu-->
    <string name="settings">Settings</string>
    <!--settings text-->
    <string name="change_username">Change Username</string>
    <string name="save_username">Save</string>
    <string name="updated_username">Username saved</string>
    <string name="edit_prompts">Edit Prompts</string>
    <string name="label_practice">Practice</string>
    <string name="practice_times">Random Time</string>
    <string name="label_min_time">Min. Time (in minutes):</string>
    <string name="label_max_time">Max. Time (in minutes):</string>
    <string name="save_practice_times">Save</string>
    <string name="updated_practice_times">Practice times saved</string>
    <string name="label_bot">writingbot</string>
    <string name="request_challenge">Request Challenge</string>
    <string name="label_bot_daily_notification">Daily Notifications</string>
    <string name="label_bot_generate_random">Generate Random Prompts</string>
<!--    <string name="success_bot">You have a new challenge from writingbot!</string>-->
    <string name="switch_daily_on">Daily notifications are: on</string>
    <string name="switch_daily_off">Daily notifications are: off</string>
    <string name="switch_random_prompts_on">Bot random prompts are: on</string>
    <string name="switch_random_prompts_off">Bot random prompts are: off</string>
    <!--edit prompts-->
    <string name="add_prompt">Add Prompt</string>
    <string name="hint_new_prompt">Write a new prompt</string>
    <string name="deleted_prompt">You deleted prompt: %1$s</string>
    <string name="random_prompt">Random Subject Prompt</string>
    <string name="generated_random_prompt">%1$s - %2$s</string>
    <!--deleted-->
    <string name="deleted_writing">You deleted writing for: %1$s</string>
    <string name="delete_confirmation">Are you sure you want to delete %1$s with prompt:
    %2$s ?
    </string>
    <!--    name of challenge includes the words challenge from or challenge sent to-->
    <string name="deleted_challenge">You deleted: %1$s</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <!--    other-->
    <string name="timer_default">00:00</string>
</resources>